/CORREGIR PLANNER INIT
    /CAMBIAR EL TIPO DE DATO DE MUTEX DE LAS COLAS
    /CORREGIR LOS MUTEX