@@ -7,7 +7,7 @@ void queue_process(t_pcb* process, int estado){
     case NEW:
         process->metricas_de_estado->new += 1;
         actualizarTiempo(&(process->metricas_de_tiempo->metrica_actual),&(process->metricas_de_tiempo->NEW));
-        cambiar_estado(planner->long_term->algoritmo_planificador, process, planner->long_term->queue_NEW);
+        cambiar_estado(planner->long_term->algoritmo_planificador, process, planner->long_term->queue_NEW); 
 
         if(list_size(planner->long_term->queue_NEW->queue_ESTADO) == 1 ){ // Si la cola estaba vacia manda la solicitud a memoria (size retornaria 1 que es igual a true)
             
@@ -82,6 +82,11 @@ void queue_process(t_pcb* process, int estado){
 
 void cambiar_estado(void (*algoritmo_planificador)(t_pcb* process, t_list* estado), t_pcb* process, t_monitor* sgteEstado){
     
+    // Verificación de parámetros
+    if (process == NULL || sgteEstado == NULL ) {
+        return; // O manejar error adecuadamente
+    }
+
     if(process->queue_ESTADO_ACTUAL != NULL){
         // Cerramos el mutex y sacamos el pcb de la cola del estado en el que estaba el proceso (que esta primero)
         pthread_mutex_lock(&process->queue_ESTADO_ACTUAL->mutex);
